--- a/index.html
+++ b/index.html
@@ -32,18 +32,33 @@
 <body>
   <div class="container">
     <div class="result">
-      <h5 style="color: hsl(241, 100%, 89%);">Your Result</h5>
+      <h3 style="color: hsl(241, 100%, 89%);">Your Result</h3>
       <div class="circle">
-        <h4>76</h4>
-        <p>of 100</p>
+        <h1 style="color: hsl(0, 0%, 100%);">76</h1>
+        <p style="color: hsl(241, 100%, 89%);">of 100</p>
       </div>
-      <div>
-        <h3>Great</h3>
-        <p>You scored higher than 65% of the people who have taken these tests.</p>
+      <div class="container_div">
+        <h2 style="color: hsl(0, 0%, 100%);">Great</h2>
+        <p style="color: hsl(221, 100%, 96%);">You scored higher than 65% of the people who have taken these tests.</p>
       </div>
-
     </div>
     <div class="summary">
+      <div>
+        <h5 style="color: hsla(241, 66%, 14%, 0.671);">Summary</h5>
+      </div>
+      <div>
+        <div class="reaction">
+          <img src="assets/images/icon-reaction.svg" alt="reaction icon">Reaction
+          <p>80 / 100</p>
+        </div>
+        <div class="memory">
+          <img src="assets/images/icon-memory.svg" alt="memory icon">Memory
+          <p>80 / 100</p>
+        </div>
+        
+        
+
+      </div>
 
     </div>
   </div>
@@ -52,7 +67,7 @@
 
 </html>
 
-<!-- Summary
+<!-- 
 
 Reaction
 80 / 100
