--- a/index.html
+++ b/index.html
@@ -46,18 +46,24 @@
       <div>
         <h5 style="color: hsla(241, 66%, 14%, 0.671);">Summary</h5>
       </div>
-      <div>
         <div class="reaction">
-          <img src="assets/images/icon-reaction.svg" alt="reaction icon">Reaction
-          <p>80 / 100</p>
+          <div style="color: hsl(0, 100%, 67%);"><img src="assets/images/icon-reaction.svg" alt="reaction icon">Reaction</div>
+          <p class="mark">92</p><p class="full"> / 100</p>
         </div>
         <div class="memory">
           <img src="assets/images/icon-memory.svg" alt="memory icon">Memory
-          <p>80 / 100</p>
+          <p class="mark">80</p><p class="full"> / 100</p>
         </div>
+        <div class="verbal">
+          <img src="assets/images/icon-verbal.svg" alt="verbal icon">Verbal
+          <p class="mark">61</p><p class="full"> / 100</p>
+        </div>
+        <div class="visual">
+          <img src="assets/images/icon-visual.svg" alt="visual icon">Visual
+          <p class="mark">72</p><p class="full"> / 100</p>
+        </div>
+      <div class="button">Continue</div>
         
-        
-
       </div>
 
     </div>
