--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h5 style="color: hsla(241, 66%, 14%, 0.671);">Summary</h5>
       </div>
         <div class="reaction">
-          <div style="color: hsl(0, 100%, 67%);"><img src="assets/images/icon-reaction.svg" alt="reaction icon">Reaction</div>
+          <div><img src="assets/images/icon-reaction.svg" alt="reaction icon">Reaction</div>
           <p class="mark">92</p><p class="full"> / 100</p>
         </div>
         <div class="memory">
